# SignalFoundry

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  plan.txt
crates/backend/: Cargo.toml
crates/backend/src/: databento_service.rs  handlers.rs  main.rs  mock_service.rs  service.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
ui/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
ui/src/: App.tsx  api.ts
ui/src/components/: HistoricalChart.tsx  LiveStream.tsx  SymbolForm.tsx  TradeTape.tsx
