[package]
name = "backend"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
futures = "0.3"
async-trait = "0.1"
thiserror = "1.0"
tokio-stream = "0.1"
async-stream = "0.3"
databento = "0.34"
time = "0.3"
